# boogy-sdk

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
crates/boogy-auth-core/: Cargo.toml
crates/boogy-auth-core/src/: api_key.rs  error.rs  lib.rs
crates/boogy-cli/: AGENTS.md  Cargo.toml  README.md
crates/boogy-cli/src/: build.rs  check.rs  config.rs  deploy.rs  domain.rs  frontend.rs  login.rs  main.rs  manage.rs  provision.rs  secret.rs  skills.rs  smoke.rs
crates/boogy-conventions/: Cargo.toml
crates/boogy-conventions/src/: lib.rs
crates/boogy-sdk/: AGENTS.md  Cargo.toml  README.md
crates/boogy-sdk-macros/: Cargo.toml
crates/boogy-sdk-macros/src/: lib.rs
crates/boogy-sdk-macros/tests/: derive.rs  job.rs
crates/boogy-sdk/src/: ctx.rs  error.rs  extract.rs  glue.rs  idempotency.rs  ids.rs  job_router.rs  jobs.rs  json.rs  lib.rs  log.rs  mcp.rs  model.rs  pagination.rs  peer.rs  query.rs  relations.rs  request_state.rs  response.rs  router.rs  rpc.rs  schema_resolve.rs  secrets.rs  signing.rs  spec.rs  store.rs  vector.rs  websockets.rs
crates/boogy-sdk/src/api_keys/: glue.rs  logic.rs  mod.rs  schema.rs  types.rs
crates/boogy-seal/: Cargo.toml
crates/boogy-seal/src/: lib.rs
crates/boogy-seal/tests/: webcrypto_interop.rs  webcrypto_vector.json
crates/boogy-wit/: AGENTS.md  Cargo.toml  README.md
crates/boogy-wit/src/: lib.rs
crates/boogy-wit/wit/: auth.wit  background-jobs.wit  http-handler.wit  job-handler.wit  outbound-http.wit  peer.wit  runtime.wit  secrets.wit  signing.wit  store.wit  vector.wit  websockets.wit  world.wit
docs/: llms.txt  manifest.md  quickstart.md
smoke/: CLAUDE.md  Cargo.toml  build.rs
smoke/src/: lib.rs
