[workspace]
resolver = "2"
members = [
    "crates/boogy-wit",
    "crates/boogy-auth-core",
    "crates/boogy-sdk-macros",
    "crates/boogy-sdk",
    "crates/boogy-cli",
    "smoke",
]

[workspace.dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
matchit = "0.8"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
garde = { version = "0.22", default-features = false, features = ["derive"] }
schemars = { version = "0.8", default-features = false, features = ["derive"] }
serde_urlencoded = "0.7"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
