[package]
name = "boogy-auth-core"
version = "0.1.0"
edition = "2021"
description = "Format-level auth primitives shared by the Boogy SDK and platform: API-key format/generation/hashing/verification and the common auth error type."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Boogy-ai/boogy-sdk"
homepage = "https://boogy.ai"

[dependencies]
# All wasm32-wasip2-clean. Versions match the pins boogy-auth used for
# these modules before the split.
thiserror = "2"
serde_json = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
crc32c = "0.6"
rand_core = { version = "0.6", features = ["std"] }
