[package]
name = "boogy-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for building and deploying Boogy components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Boogy-ai/boogy-sdk"
homepage = "https://boogy.ai"

[[bin]]
name = "boogy"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
boogy-seal = { path = "../boogy-seal" }
boogy-conventions = { path = "../boogy-conventions" }
base64 = "0.22"
dirs = "5"
tar = "0.4"
flate2 = "1"
# Headless-browser deploy smoke (`boogy deploy --smoke`): drives a detected,
# externally-installed Chrome/Chromium over CDP. Does not bundle a browser.
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
