[package]
name = "boogy-seal"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = "0.10"
sha2 = { workspace = true }
rand = "0.8"
secrecy = "0.10"
base64 = "0.22"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2"
hex = "0.4"
zeroize = "1"
